feat: implement Identity and prepare protected cluster deployment
